--- a/formularz_sokhatskyi.html
+++ b/formularz_sokhatskyi.html
@@ -5,7 +5,7 @@
 		<title>formularz</title>
 	</head>
 	<body>
-		<h3><a href="index.html.html">wróć do strony głównej</a></h3>
+		<h3><a href="index.html">wróć do strony głównej</a></h3>
 		<h1>tutaj będzie formularz</h1>
 	</body>
 </html>
