--- a/poczta_sokhatskyi.html
+++ b/poczta_sokhatskyi.html
@@ -5,7 +5,7 @@
 		<title>poczta</title>
 	</head>
 	<body>
-		<h3><a href="index.html.html">wróć do strony głównej</a><br></h3>
+		<h3><a href="index.html">wróć do strony głównej</a><br></h3>
 		<img src="img/email.gif" alt="email"><br>
 		<h3><a href="mailto:nazarsohatskij07@gmail.com">link do poczty</a></h3>
 		
