--- a/walidacja_sokhatskyi.html
+++ b/walidacja_sokhatskyi.html
@@ -8,6 +8,6 @@
 <body>
     <img src="C:\Users\Nazar\Desktop\ZAD_7_SOKHATSKYI\img\bląd.png" alt="blad">
     <img width="100%" src="C:\Users\Nazar\Desktop\ZAD_7_SOKHATSKYI\img\poprawa.png" alt="poprawa">
-    <h3><a href="index.html.html">wróć do strony głównej</a></h3>
+    <h3><a href="index.html">wróć do strony głównej</a></h3>
 </body>
 </html>
