--- a/tabela_sokhatskyi.html
+++ b/tabela_sokhatskyi.html
@@ -5,7 +5,7 @@
 		<title>tabela</title>
 	</head>
 	<body>
-		<h3><a href="index.html.html">wróć do strony głównej</a><br></h3>
+		<h3><a href="index.html">wróć do strony głównej</a><br></h3>
 		<h1>tutaj będzie tabela:</h1>
 		<h3><a href="tabela.html">tabela</a></h3>
 	</body>
