--- a/tabela.html
+++ b/tabela.html
@@ -127,7 +127,7 @@
 		</style>
 	</head>
 	<body>
-		<a href="index.html.html">index.html</a>
+		<a href="index.html">index.html</a>
 		<h1>tutaj będzie tabela</h1>
 		<table class="table">
 			<caption>Dane komputerowe - Nazarii Sokhatskyi 2Kg2</caption>
