--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
  <body>
  <div id="end">
  </div>
-<h2><a href="poczta_sokhatskyi.html.html">link do strony poczty</a><br></h2>                                                        
-<h2><a href="plik_sokhatskyi.html.html">link do strony pliku</a><br></h2>
+<h2><a href="poczta_sokhatskyi.html">link do strony poczty</a><br></h2>                                                        
+<h2><a href="plik_sokhatskyi.html">link do strony pliku</a><br></h2>
 <h2><a href="#end">link do końca tekstu</a><br></h2>
 <h2><a href="tabela_sokhatskyi.html">link do tabeli</a><br></h2>
 <h2><a href="formularz_sokhatskyi.html">link do formularza</a><br></h2>
@@ -138,9 +138,9 @@ Sokhatskyi &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 <html>
 <head>
-<p><a href="poczta_sokhatskyi.html.html">link do strony poczty</a><br>                                                        
-<a href="plik_sokhatskyi.html.html">link do strony pliku</a><br>
-<a href="index.html.html#end">link do końca tekstu</a><br>
+<p><a href="poczta_sokhatskyi.html">link do strony poczty</a><br>                                                        
+<a href="plik_sokhatskyi.html">link do strony pliku</a><br>
+<a href="index.html#end">link do końca tekstu</a><br>
 <a href="tabela_sokhatskyi.html">link do tabeli</a><br>
 <a href="formularz_sokhatskyi.html">link do formularza</a><br>
 </head>
@@ -242,8 +242,8 @@ Marian wstaje i kieruje się do wyjścia.
     </div>
 </body>
 </html>
-<br><a href="poczta_sokhatskyi.html.html">link do strony poczty</a><br>                                                     
-<a href="plik_sokhatskyi.html.html">link do strony pliku</a><br>
+<br><a href="poczta_sokhatskyi.html">link do strony poczty</a><br>                                                     
+<a href="plik_sokhatskyi.html">link do strony pliku</a><br>
 <a href="#end">link do końca tekstu</a><br>
 <a href="tabela_sokhatskyi.html">link do tabeli</a><br>
 <a href="formularz_sokhatskyi.html">link do formularza</a><br>
