--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <table>
         <tr>
             <td colspan="3">
-                <iframe scrolling="no" width="900" height="100" name="obszar_logo" src="logo_sokhatskyi.html" frameborder="0"></iframe>
+                <iframe scrolling="no" width="900" height="200" name="obszar_logo" src="logo.sokhatskyi.html" frameborder="0"></iframe>
             </td>
         </tr>
         <tr>
@@ -34,9 +34,9 @@
                 <ul>
                     <li><a href="https://zse.edu.gdansk.pl/" target="obszar_glowny">Strona ZSE</a></li>
                     <li><a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="DSC_0814.JPG" target="obszar_glowny">Stare miasto Lwów</a></li>
+                    <li><a href="OIP.jpg" target="obszar_glowny">Zdjęcie McQueena</a></li>
+                    <li><a href="video_sokh.mp4" target="obszar_glowny">Filmik</a></li>
                     
                 </ul>
             </td>
@@ -46,10 +46,10 @@
             <td style="width: 18%;">
                 <b>prawe menu</b>
                 <map id="mapa_sokhatskyi">
-                    <area shape="circle" coords="48,45,48" href="">
+                    <area shape="circle" coords="48,45,48" href="Dwayne_Johnson.jpg">
                     <area shape="rect" coords="5,89,96,129" href="tabela.html" target="obszar_glowny">
                     <area shape="poly" coords="18,200,50,134,82,199" href="formularz_sokhatskyi.html" target="obszar_glowny">
-                    <area shape="rect" coords="2,205,99,241" href="mailto:alehandrorizuchelo@gmail.com">
+                    <area shape="rect" coords="2,205,99,241" href="mailto:n3zz1x07@gmail.com">
                     <area shape="circle" coords="49,271,30" href="z1_z6_sokhatskyi.html" target="obszar_glowny">
                 </map>
                 <img width="100" height="300" src="mapa.gif" alt="tutaj wybieraj linki" usemap="#mapa_sokhatskyi">
